Appearance: Use a dynamic instead of fixed size for the text preview area.

Fixes #17872.